--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@
 #
 # Bitcoin (Testnet):
 # ELECTRUMX_PROXY_BASE_URL=https://eptestnet.atomicals.xyz/proxy
-ELECTRUMX_PROXY_BASE_URL=https://ep.nextdao.xyz/proxy
+# ELECTRUMX_PROXY_BASE_URL=https://ep.nextdao.xyz/proxy
 # ELECTRUMX_PROXY_BASE_URL=https://ep.consync.xyz/proxy
-# ELECTRUMX_PROXY_BASE_URL=https://epalpha.atomicals.xyz/proxy
+ELECTRUMX_PROXY_BASE_URL=https://epalpha.atomicals.xyz/proxy
 WALLET_PATH=./wallets
 WALLET_FILE=wallet.json
 # testnet or livenet or regtest
