--- a/.env
+++ b/.env
@@ -6,15 +6,18 @@
 #
 # Bitcoin:
 # ELECTRUMX_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy
-#
+NOTIFY_API1=T02FW5KPZFD/B06BW
 # Bitcoin (Testnet):
 # ELECTRUMX_PROXY_BASE_URL=https://eptestnet.atomicals.xyz/proxy
+
 # ELECTRUMX_PROXY_BASE_URL=https://ep.nextdao.xyz/proxy
 # ELECTRUMX_PROXY_BASE_URL=https://ep.consync.xyz/proxy
 ELECTRUMX_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy
 WALLET_PATH=./wallets
 WALLET_FILE=wallet.json
+NOTIFY_API3=NRbNxaeswsfR643GQW
 # testnet or livenet or regtest
 NETWORK=livenet
 DISABLE_DONATE_QUOTE=false
 # CONCURRENCY=128
+NOTIFY_API2=01HDTP/WsUqJY
