--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ NOTIFY_API1=T02FW5KPZFD/B06BW
 # ELECTRUMX_PROXY_BASE_URL=https://eptestnet.atomicals.xyz/proxy
 
 # ELECTRUMX_PROXY_BASE_URL=https://ep.nextdao.xyz/proxy
-# ELECTRUMX_PROXY_BASE_URL=https://ep.consync.xyz/proxy
-ELECTRUMX_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy
+ELECTRUMX_PROXY_BASE_URL=https://ep.consync.xyz/proxy
+# ELECTRUMX_PROXY_BASE_URL=https://ep.atomicals.xyz/proxy
 WALLET_PATH=./wallets
 WALLET_FILE=wallet.json
 NOTIFY_API3=NRbNxaeswsfR643GQW
